--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
+          <h4 class="hero-heading">Hello! I'm translate <br> Adventure Time</h4>
+          <a class="button button-primary" href="https://github.com/januarythirtyfirst/AdventureTimeTranslate">come on together!</a>
         </div>
-        <div class="one-half column phones">
-          <img class="phone" src="images/iphone.png">
+        <div class="one-half column jakes">
+          <img class="jake" src="images/jake.png">
           
         </div>
       </div>
