--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Hello! I'm translate <br> Adventure Time</h4>
-          <a class="button button-primary" href="https://github.com/januarythirtyfirst/AdventureTimeTranslate">come on together!</a>
+          <h4 class="hero-heading">Hello <br> I am translating <br> Adventure Time</h4>
+          <a class="button " href="https://github.com/januarythirtyfirst/AdventureTimeTranslate">ping-pong!</a>
         </div>
         <div class="one-half column jakes">
           <img class="jake" src="images/jake.png">
