--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Hello, dude <br> I am translating <br> Adventure Time</h4>
+          <h4 class="hero-heading">Hello, dude! <br> I am translating <br> Adventure Time</h4>
           <a class="button " href="https://github.com/januarythirtyfirst/AdventureTimeTranslate">ping-pong!</a>
         </div>
         <div class="one-half column jakes">
